--- a/KuruTools/Properties/launchSettings.json
+++ b/KuruTools/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "KuruTools": {
-      "commandName": "Project",
-      "commandLineArgs": "rom.gba"
+      "commandName": "Project"
     }
   }
 }
