Option to export world data

--- a/KuruTools/Properties/launchSettings.json
+++ b/KuruTools/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "KuruTools": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "--extract-worlds-data \"worlds\""
     }
   }
 }
