--- a/KuruTools/KuruTools.csproj
+++ b/KuruTools/KuruTools.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20303.1" />
     <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20303.1" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0-preview.5.20278.1" />
   </ItemGroup>
 
 </Project>
