support common palette and simplify output

--- a/KuruTools/Properties/launchSettings.json
+++ b/KuruTools/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "KuruTools": {
       "commandName": "Project",
-      "commandLineArgs": "--extract-worlds-data \"worlds\""
+      "commandLineArgs": "--extract-tiles \"tiles\""
     }
   }
 }
