rom building system integration in progress

--- a/KuruLevelEditor/KuruLevelEditor/config.ini
+++ b/KuruLevelEditor/KuruLevelEditor/config.ini
@@ -4,4 +4,4 @@ InputRom=input.gba
 OutputRom=output.gba
 
 [Emulator]
-Command=EmuHawks.exe --load-slot=0 %ROM%
+Command=.\EmuHawk.lnk --load-slot=0 %ROM%
