Rename KuruTools into KuruRomExtractor

--- a/KuruRomExtractor/KuruRomExtractor/Properties/launchSettings.json
+++ b/KuruRomExtractor/KuruRomExtractor/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "KuruTools": {
+    "KuruRomExtractor": {
       "commandName": "Project",
       "commandLineArgs": "--extract-tiles \"tiles\""
     }
