--- a/KuruLevelEditor/KuruLevelEditor/config.ini
+++ b/KuruLevelEditor/KuruLevelEditor/config.ini
@@ -1,5 +1,5 @@
 ﻿[ROM]
-ExtractorCommand=dotnet KuruTools.dll %ARGS%
+ExtractorCommand=dotnet KuruRomExtractor.dll %ARGS%
 InputRom=input.gba
 OutputRom=output.gba
 
