extraction of physical map and objects

--- a/KuruRomExtractor/KuruRomExtractor/Properties/launchSettings.json
+++ b/KuruRomExtractor/KuruRomExtractor/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "KuruRomExtractor": {
       "commandName": "Project",
-      "commandLineArgs": "--extract-tiles \"tiles\""
+      "commandLineArgs": "--paradise"
     }
   }
 }
