export tiles (grayscale)

--- a/KuruRomExtractor/KuruRomExtractor/Properties/launchSettings.json
+++ b/KuruRomExtractor/KuruRomExtractor/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "KuruRomExtractor": {
       "commandName": "Project",
-      "commandLineArgs": "--paradise"
+      "commandLineArgs": "--paradise --extract-tiles tiles"
     }
   }
 }
