extraction and alteration of paradise layer 4 + start support in editor

--- a/KuruLevelEditor/KuruLevelEditor/KuruLevelEditor.csproj
+++ b/KuruLevelEditor/KuruLevelEditor/KuruLevelEditor.csproj
@@ -33,6 +33,9 @@
     <None Update="config.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Content\inventories\graphical2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Content\inventories\graphical.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
