change config for rom extractor

--- a/KuruRomExtractor/KuruRomExtractor/Properties/launchSettings.json
+++ b/KuruRomExtractor/KuruRomExtractor/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "KuruRomExtractor": {
       "commandName": "Project",
-      "commandLineArgs": "--workspace paradise_levels --extract-tiles paradise_tiles"
+      "commandLineArgs": "--workspace paradise_levels --output \"Kururin Paradise (Japan).gba\""
     }
   }
 }
