--- a/KuruLevelEditor/KuruLevelEditor/KuruLevelEditor.csproj
+++ b/KuruLevelEditor/KuruLevelEditor/KuruLevelEditor.csproj
@@ -24,10 +24,10 @@
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="5.0.0-preview.6.20305.6" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1375-develop" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1375-develop" />
-    <PackageReference Include="Myra" Version="1.0.0.204" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="5.0.0-preview.7.20364.11" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="Myra" Version="1.0.1.209" />
   </ItemGroup>
   <ItemGroup>
     <None Update="config.ini">
